--- a/es.html
+++ b/es.html
@@ -3,22 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="OvenBird Team">
+    <meta name="author" content="OvenBirdTeam">
     <meta name="robots" content="index, follow"/>
     <meta name="description" content="En OvenBird, nuestro compromiso es convertir tus sueños digitales en realidades
-    tangibles. Nos dedicamos a ofrecer servicios de desarrollo web . Creemos en la importancia de garantizar 
+    tangibles. Nos dedicamos a ofrecer servicios de desarrollo web. Creemos en la importancia de garantizar 
     soluciones seguras, innovadoras y escalables que potencien tu negocio y superen tus expectativas">
     <meta name="keywords" content="Diseño web profesional, desarrollo Front-End, desarrollo Back-End, creación de 
     páginas web">
     <meta http-equiv="Content-Security-Policy" content="font-src 'self' https://fonts.gstatic.com; style-src 'self' https://fonts.googleapis.com;">
-    <link rel="canonical" href="htttps://ovenbirdteam.com">
+    <link rel="canonical" href="https://www.ovenbirdteam.com/">
+    <link rel="alternate" href="https://www.ovenbirdteam.com/" hreflang="en">
+    <link rel="alternate" href="https://www.ovenbirdteam.com/es.html" hreflang="es">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="icon" href="img/logo.ico" type="image/x-icon">
-    <title>OvenBird Team</title>
+    <title>OvenBirdTeam</title>
 </head>
 <body>
     <!-- Barra de Navegación -->
@@ -45,13 +47,15 @@
                         Contáctanos
                     </a>
                 </li>
-            </ul>
-            <ul class="nav-ul">
-                <li class="nav-ul-li">
-                    <a hreflang="es" href="es.html" class="nav-link">Español</a>
-                </li>
-                <li class="nav-ul-li">
-                    <a hreflang="en" href="index.html" class="nav-link">English</a>
+                <li class="langue-li"><p>Idioma</p>
+                    <ul class="nav-ul-langue">
+                        <li class="nav-ul-langue-li">
+                            <a hreflang="en" href="index.html" class="nav-link">English</a>
+                        </li>
+                        <li class="nav-ul-langue-li">
+                            <a hreflang="es" href="es.html" class="nav-link">Español</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -86,16 +90,16 @@
                             Diseño y desarrollo de interfaces responsivas.
                         </li>
                         <li class="services-ul-li">
-                            Creación de experiencias de usuario (UX) intuitivas
+                            Creación de experiencias de usuario (UX) intuitivas.
                         </li>
                         <li class="services-ul-li">
-                            Optimización de rendimiento web
+                            Optimización de rendimiento web.
                         </li>
                         <li class="services-ul-li">
-                            Animaciones y efectos interactivos personalizados
+                            Animaciones y efectos interactivos personalizados.
                         </li>
                         <li class="services-ul-li">
-                            Integración de APIs en el cliente
+                            Integración de APIs en el cliente.
                         </li>
                         <li class="services-ul-li">
                             Garantía de compatibilidad entre navegadores y dispositivos.
@@ -166,10 +170,6 @@
                         <input class="form-input" type="email" name="email" id="email" placeholder="Email" autocomplete="email">
                     </div>
                     <div class="form-container-input">
-                        <label class="form-label" for="company">Empresa o Intitución</label>
-                        <input class="form-input" type="text" name="company" id="company" placeholder="Empresa" autocomplete="organization">
-                    </div>
-                    <div class="form-container-input">
                         <label class="form-label" for="message">Mensaje:</label>
                         <textarea class="form-textarea" name="message" id="message" cols="50" rows="5"  placeholder="Mensaje"></textarea>
                     </div>
@@ -184,11 +184,11 @@
     </main>
         <footer class="footer-container">
             <div class="footer-container-links">
-                <a class="footer-link" href="mailto:ovenbirdteam@gmail.com?" class="footer-button-link">Contáctanos</a>
+                <a class="footer-link" href="mailto:ovenbirdteam@gmail.com" class="footer-button-link">Contáctanos</a>
                 <a class="footer-link" href="es/terminos-y-condiciones.html">Términos y Condiciones</a>
             </div>
             <div class="footer-container-text">
-                <p class="footer-text">©OvenBird Team. Todos los derechos reservados.</p>
+                <p class="footer-text">©OvenBirdTeam. Todos los derechos reservados.</p>
             </div>
         </footer>
 </body>
