--- a/es/terminos-y-condiciones.html
+++ b/es/terminos-y-condiciones.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://www.ovenbirdteam.com/es/terminos-y-condiciones.html">
+    <link rel="alternate" href="https://www.ovenbirdteam.com/terms-and-conditions.html" hreflang="en">
+    <link rel="alternate" href="https://www.ovenbirdteam.com/terminos-y-condiciones.html" hreflang="es">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="../styleterms.css">
     <link rel="stylesheet" href="../normalize.css">
@@ -35,6 +38,16 @@
                 <a href="../es.html#Contactanos" class="nav-link">
                     Contáctanos
                 </a>
+            </li>
+            <li class="langue-li"><p>Idioma</p>
+                <ul class="nav-ul-langue">
+                    <li class="nav-ul-langue-li">
+                        <a hreflang="en" href="../terms-and-conditions.html" class="nav-link">English</a>
+                    </li>
+                    <li class="nav-ul-langue-li">
+                        <a hreflang="es" href="terminos-y-condiciones.html" class="nav-link">Español</a>
+                    </li>
+                </ul>
             </li>
         </ul>
     </nav>
@@ -90,11 +103,11 @@
     </main>
     <footer class="footer-container">
         <div class="footer-container-links">
-            <a class="footer-link" href="mailto:ovenbirdteam@gmail.com?subject=Asunto%20del%20Correo&body=Hola,%20este%20es%20el%20cuerpo%20del%20mensaje" class="footer-button-link">Contáctanos</a>
+            <a class="footer-link" href="mailto:ovenbirdteam@gmail.com" class="footer-button-link">Contáctanos</a>
             <a class="footer-link" href="terminos-y-condiciones.html">Términos y Condiciones</a>
         </div>
         <div class="footer-container-text">
-            <p class="footer-text">©OvenBird Team. Todos los derechos reservados.</p>
+            <p class="footer-text">©OvenBirdTeam. Todos los derechos reservados.</p>
         </div>
     </footer>
 </body>
