--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="OvenBird Team">
+    <meta name="author" content="OvenBirdTeam">
     <meta name="robots" content="index, follow"/>
-    <meta name="description" content="En OvenBird, nuestro compromiso es convertir tus sueños digitales en realidades
-    tangibles. Nos dedicamos a ofrecer servicios de desarrollo web . Creemos en la importancia de garantizar 
-    soluciones seguras, innovadoras y escalables que potencien tu negocio y superen tus expectativas">
-    <meta name="keywords" content="Diseño web profesional, desarrollo Front-End, desarrollo Back-End, creación de 
-    páginas web">
+    <meta name="description" content="We are committed to turning your digital dreams into tangible realities.
+    We are dedicated to offering web development services. We believe in the importance of ensuring
+    secure, innovative and scalable solutions that boost your business and exceed your expectations.">
+    <meta name="keywords" content="Professional web design, Front-End development, Back-End development, web page creation">
     <meta http-equiv="Content-Security-Policy" content="font-src 'self' https://fonts.gstatic.com; style-src 'self' https://fonts.googleapis.com;">
-    <link rel="canonical" href="htttps://ovenbirdteam.com">
+    <link rel="canonical" href="https://www.ovenbirdteam.com/">
+    <link rel="alternate" href="https://www.ovenbirdteam.com/" hreflang="en">
+    <link rel="alternate" href="https://www.ovenbirdteam.com/es.html" hreflang="es">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="icon" href="img/logo.ico" type="image/x-icon">
-    <title>OvenBird Team</title>
+    <title>OvenBirdTeam</title>
 </head>
 <body>
     <!-- Barra de Navegación -->
@@ -32,26 +33,28 @@
             <ul class="nav-ul">
                 <li class="nav-ul-li">
                     <a href="#OurServices" class="nav-link">
-                        Nuestros Servicios
+                        Our Services
                     </a>
                 </li>
                 <li class="nav-ul-li">
                     <a href="#AboutUs" class="nav-link">
-                        Sobre Nosotros
+                        About Us
                     </a>
                 </li>
                 <li class="nav-ul-li">
                     <a href="#ContactUs" class="nav-link">
-                        Contáctanos
+                        Contact Us
                     </a>
                 </li>
-            </ul>
-            <ul>
-                <li class="nav-ul-li">
-                    <a hreflang="en" href="/" class="nav-link">English</a>
-                </li>
-                <li class="nav-ul-li">
-                    <a hreflang="es" href="es.html" class="nav-link">Español</a>
+                <li class="langue-li"><p>Langue</p>
+                    <ul class="nav-ul-langue">
+                        <li class="nav-ul-langue-li">
+                            <a hreflang="en" href="index.html" class="nav-link">English</a>
+                        </li>
+                        <li class="nav-ul-langue-li">
+                            <a hreflang="es" href="es.html" class="nav-link">Español</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -61,10 +64,10 @@
         <header>
             <div class="header-container-title">
                 <h1>
-                    Las soluciones a tus problemas en OvenBird Team.
+                    Solutions to your problems at OvenBird Team.
                 </h1>
                 <p>
-                    Creación, diseño y despliegue de páginas webs.
+                    Creation, design and deployment of web pages.
                 </p>
             </div>
             <div class="header-container-logo">
@@ -74,56 +77,56 @@
     <!-- Sección Nuestros Servicios -->
         <section class="section-services">
             <h2 id="#OurServices">
-                    Nuestros Servicios
+                Our Services
             </h2>
             <div class="section-container-services">
                 <div class="section-container-services-ul">
                     <h3 class="services-h3">
-                        Servicios de Front-End
+                        Front-End Services
                     </h3>
                     <ul class="services-ul">
                         <li class="services-ul-li">
-                            Diseño y desarrollo de interfaces responsivas.
+                            Design and development of responsive interfaces.
                         </li>
                         <li class="services-ul-li">
-                            Creación de experiencias de usuario (UX) intuitivas
+                            Creating intuitive user experiences (UX).
                         </li>
                         <li class="services-ul-li">
-                            Optimización de rendimiento web
+                            Web performance optimization.
                         </li>
                         <li class="services-ul-li">
-                            Animaciones y efectos interactivos personalizados
+                            Custom animations and interactive effects.
                         </li>
                         <li class="services-ul-li">
-                            Integración de APIs en el cliente
+                            API integration in the client.
                         </li>
                         <li class="services-ul-li">
-                            Garantía de compatibilidad entre navegadores y dispositivos.
+                            Compatibility guarantee between browsers and devices.
                         </li>
                     </ul>
                 </div>
                 <div class="section-container-services-ul">
                     <h3 class="services-h3">
-                        Servicios de Back-End
+                        Back-End Services
                     </h3>
                     <ul class="services-ul">
                         <li class="services-ul-li">
-                            Desarrollo de sistemas escalables con  PHP.
+                            Development of scalable systems with PHP.
                         </li>
                         <li class="services-ul-li">
-                            Gestión y diseño de bases de datos MySQL.
+                            MySQL database management and design.
                         </li>
                         <li class="services-ul-li">
-                            Creación e integración de APIs REST.
+                            Creation and integration of REST APIs.
                         </li>
                         <li class="services-ul-li">
-                            Desarrollo de sistemas de autenticación y autorización seguros.
+                            Development of secure authentication and authorization systems.
                         </li>
                         <li class="services-ul-li">
-                            Mantenimiento y optimización de servidores.
+                            Server maintenance and optimization.
                         </li>
                         <li class="services-ul-li">
-                            Integración con servicios de terceros (pasarelas de pago, mensajería, etc.).
+                            Integration with third-party services (payment gateways, messaging, etc.).
                         </li>
                     </ul>
                 </div>
@@ -132,45 +135,43 @@
     <!-- Sección Sobre Nosotros -->
         <section class="section-aboutUs">
             <h2 id="AboutUs">
-                Sobre Nosotros
+                About Us
             </h2>    
             <div class="section-aboutUs-div">
                 <p class="section-aboutUs-p">
-                En OvenBird, nuestro compromiso es convertir tus sueños digitales en realidades tangibles. Nos 
-                dedicamos a ofrecer servicios de desarrollo web . Creemos en la importancia de garantizar soluciones 
-                seguras, innovadoras y escalables que potencien tu negocio y superen tus expectativas.
+                    At OvenBird, we are committed to turning your digital dreams into tangible realities. We
+                    are dedicated to providing web development services. We believe in the importance of ensuring secure, innovative, and scalable
+                    solutions that boost your business and exceed your expectations.
                 </p>
-                <p class="section-aboutUs-p">Nuestro equipo altamente capacitado se distingue por su dedicación y 
-                    enfoque personalizado en cada proyecto, asegurándonos de que cada detalle cuente. ¡Confía en 
-                    OvenBird y da el primer paso hacia una presencia digital que destaque!</p>
+                <p class="section-aboutUs-p">
+                    Our highly trained team is distinguished by their dedication and
+                    personalized approach to each project, making sure that every detail counts. Trust
+                    OvenBird and take the first step towards a digital presence that stands out!
+                </p>
              </div>
         </section>
     <!-- Sección Contáctanos -->
         <section class="section-contactUs">
             <h2 id="ContactUs">
-                Contacto
+                Contact
             </h2>
             <form  data-netlify="true" netlify-honeypot="bot-field" class="section-form" name="contact" id="form" method="POST">
                 <div class="form-container">
                     <input class="input-b" name="bot-field" type="hidden">
                     <div class="form-container-input">
-                        <label class="form-label" for="name">Nombre:</label>
+                        <label class="form-label" for="name">Name:</label>
                         <input class="form-input" type="text" name="name" id="name" placeholder="Nombre" autocomplete="name">
                     </div>
                     <div class="form-container-input">
-                        <label class="form-label" for="lastname">Apellido:</label>
+                        <label class="form-label" for="lastname">Last name:</label>
                         <input class="form-input" type="text" name="lastname" id="lastname" placeholder="Apellido" autocomplete="family-name">
                     </div>
                     <div class="form-container-input">
-                        <label class="form-label" for="email">Correo Electrónico:</label>
+                        <label class="form-label" for="email">Email:</label>
                         <input class="form-input" type="email" name="email" id="email" placeholder="Email" autocomplete="email">
                     </div>
                     <div class="form-container-input">
-                        <label class="form-label" for="company">Empresa o Intitución</label>
-                        <input class="form-input" type="text" name="company" id="company" placeholder="Empresa" autocomplete="organization">
-                    </div>
-                    <div class="form-container-input">
-                        <label class="form-label" for="message">Mensaje:</label>
+                        <label class="form-label" for="message">Message:</label>
                         <textarea class="form-textarea" name="message" id="message" cols="50" rows="5"  placeholder="Mensaje"></textarea>
                     </div>
                     <div class="form-container-button">
@@ -184,11 +185,11 @@
     </main>
         <footer class="footer-container">
             <div class="footer-container-links">
-                <a class="footer-link" href="mailto:ovenbirdteam@gmail.com?" class="footer-button-link">Contáctanos</a>
-                <a class="footer-link" href="terms-and-conditions.html">Términos y Condiciones</a>
+                <a class="footer-link" href="mailto:ovenbirdteam@gmail.com" class="footer-button-link">Contact us</a>
+                <a class="footer-link" href="terms-and-conditions.html">Terms and Conditions</a>
             </div>
             <div class="footer-container-text">
-                <p class="footer-text">©OvenBird Team. Todos los derechos reservados.</p>
+                <p class="footer-text">©OvenBirdTeam. All rights reserved.</p>
             </div>
         </footer>
 </body>
