--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://www.ovenbirdteam.com/es/terms-and-conditions.html">
+    <link rel="alternate" href="https://www.ovenbirdteam.com/terms-and-conditions.html" hreflang="en">
+    <link rel="alternate" href="https://www.ovenbirdteam.com/terminos-y-condiciones.html" hreflang="es">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="styleterms.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <title>Términos y Condiciones</title>
+    <title>Terms and Conditions</title>
     <link rel="icon" href="img/logo.ico" type="image/x-icon">
 </head>
 <body>
@@ -22,25 +25,35 @@
         </div>
         <ul class="nav-ul">
             <li class="nav-ul-li">
-                <a href="index.html#NuestrosServicios" class="nav-link">
-                    Nuestros Servicios
+                <a href="index.html#OurServices" class="nav-link">
+                    Our Services
                 </a>
             </li>
             <li class="nav-ul-li">
-                <a href="index.html#SobreNosotros" class="nav-link">
-                    Sobre Nosotros
+                <a href="index.html#AboutUs" class="nav-link">
+                    About Us
                 </a>
             </li>
             <li class="nav-ul-li">
-                <a href="index.html#Contactanos" class="nav-link">
-                    Contáctanos
+                <a href="index.html#ContactUs" class="nav-link">
+                    Contact Us
                 </a>
+            </li>
+            <li class="langue-li"><p>Langue</p>
+                <ul class="nav-ul-langue">
+                    <li class="nav-ul-langue-li">
+                        <a hreflang="en" href="../terms-and-conditions.html" class="nav-link">English</a>
+                    </li>
+                    <li class="nav-ul-langue-li">
+                        <a hreflang="es" href="terminos-y-condiciones.html" class="nav-link">Español</a>
+                    </li>
+                </ul>
             </li>
         </ul>
     </nav>
     <!-- Contenido Principal -->
     <main class="main-container">
-        <h1 class="main-title">Términos y condiciones</h1>
+        <h1 class="main-title">Terms and Conditions</h1>
         <p class="main-text">
             Al acceder y utilizar este sitio web, usted acepta estar sujeto a los siguientes términos y condiciones
             de uso, que junto con nuestra política de privacidad rigen la relación de OvenBird Team con usted en
@@ -90,11 +103,11 @@
     </main>
     <footer class="footer-container">
         <div class="footer-container-links">
-            <a class="footer-link" href="mailto:ovenbirdteam@gmail.com?subject=Asunto%20del%20Correo&body=Hola,%20este%20es%20el%20cuerpo%20del%20mensaje" class="footer-button-link">Contáctanos</a>
-            <a class="footer-link" href="terms-and-conditions.html">Términos y Condiciones</a>
+            <a class="footer-link" href="mailto:ovenbirdteam@gmail.com" class="footer-button-link">Contact us</a>
+            <a class="footer-link" href="terms-and-conditions.html">Terms and Conditions</a>
         </div>
         <div class="footer-container-text">
-            <p class="footer-text">©OvenBird Team. Todos los derechos reservados.</p>
+            <p class="footer-text">©OvenBirdTeam. All rights reserved.</p>
         </div>
     </footer>
 </body>
