--- a/es/terminos-y-condiciones.html
+++ b/es/terminos-y-condiciones.html
@@ -62,15 +62,21 @@
         </p>
         <h2 class="main-subtitle">El uso de este sitio web está sujeto a las siguientes condiciones:</h2>
         <ul class="main-list">
-            <li class="list-li">El contenido de las páginas de este sitio web es para su información general y uso solamente. Está
-                sujeto a cambios sin previo aviso.</li>
-            <li class="list-li">Ni nosotros ni terceros garantizamos la exactitud, puntualidad, rendimiento, integridad o
+            <li class="list-li">
+                El contenido de las páginas de este sitio web es para su información general y uso solamente. Está
+                sujeto a cambios sin previo aviso.
+            </li>
+            <li class="list-li">
+                Ni nosotros ni terceros garantizamos la exactitud, puntualidad, rendimiento, integridad o
                 idoneidad de la información y los materiales encontrados u ofrecidos en este sitio web para un
                 propósito particular. Usted reconoce que dicha información y materiales pueden contener
                 inexactitudes o errores y nosotros excluimos expresamente la responsabilidad por tales inexactitudes
-                o errores en la máxima medida permitida por la ley.</li>
-            <li class="list-li">Es obligatorio completar los campos requeridos del formulario de contacto, se deberá completar con
-                información personal de manera exacta y verdadera.</li>
+                o errores en la máxima medida permitida por la ley.
+            </li>
+            <li class="list-li">
+                Es obligatorio completar los campos requeridos del formulario de contacto, se deberá completar con
+                información personal de manera exacta y verdadera.
+            </li>
             <li class="list-li">
                 Los términos y condiciones, así como la política de privacidad, pueden ser modificados en cualquier
                 momento. Es responsabilidad del usuario revisar periódicamente esta página para asegurarse de que
@@ -81,10 +87,8 @@
         <ul class="main-list">
             <li class="list-li">
                 El formulario de contacto de OvenBird Team sólo recopila información personal necesaria para poder 
-                contactar con el usuario: nombre, apellido, correo electrónico, empresa o institución si es que 
-                pertenece a una, y el mensaje que desea enviar. Estos datos llegan a través del servicio de FormSubmit 
-                (<a href="https://formsubmit.co/">https://formsubmit.co/</a>) producto de Devro LABS 
-                (<a href="https://devrolabs.com/">https://devrolabs.com/</a>).
+                contactar con el usuario: nombre, apellido, correo electrónico y el mensaje que desea enviar. Estos 
+                datos se envian mediante el servicios de Forms de Netlify (https://www.netlify.com/).
             </li>
             <li class="list-li">
                 Por nuestra parte, OvenBird Team se compromete a garantizar que su privacidad esté protegida. Si le pedimos que 
