--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -55,49 +55,51 @@
     <main class="main-container">
         <h1 class="main-title">Terms and Conditions</h1>
         <p class="main-text">
-            Al acceder y utilizar este sitio web, usted acepta estar sujeto a los siguientes términos y condiciones
-            de uso, que junto con nuestra política de privacidad rigen la relación de OvenBird Team con usted en
-            relación con este sitio web. Si no está de acuerdo con alguno de estos términos y condiciones, por
-            favor no utilice nuestro sitio web.
+            By accessing and using this website, you agree to be bound by the following terms and conditions of use,
+            which together with our privacy policy govern OvenBird Team's relationship with you in relation to this 
+            website. If you do not agree with any of these terms and conditions, please do not use our website.
         </p>
-        <h2 class="main-subtitle">El uso de este sitio web está sujeto a las siguientes condiciones:</h2>
+        <h2 class="main-subtitle">The use of this website is subject to the following conditions:</h2>
         <ul class="main-list">
-            <li class="list-li">El contenido de las páginas de este sitio web es para su información general y uso solamente. Está
-                sujeto a cambios sin previo aviso.</li>
-            <li class="list-li">Ni nosotros ni terceros garantizamos la exactitud, puntualidad, rendimiento, integridad o
-                idoneidad de la información y los materiales encontrados u ofrecidos en este sitio web para un
-                propósito particular. Usted reconoce que dicha información y materiales pueden contener
-                inexactitudes o errores y nosotros excluimos expresamente la responsabilidad por tales inexactitudes
-                o errores en la máxima medida permitida por la ley.</li>
-            <li class="list-li">Es obligatorio completar los campos requeridos del formulario de contacto, se deberá completar con
-                información personal de manera exacta y verdadera.</li>
             <li class="list-li">
-                Los términos y condiciones, así como la política de privacidad, pueden ser modificados en cualquier
-                momento. Es responsabilidad del usuario revisar periódicamente esta página para asegurarse de que
-                está de acuerdo con los cambios realizados.
+            The content of the pages of this website is for your general information and use only.
+            It is subject to change without notice.
+            </li>
+            <li class="list-li">
+                Neither we nor any third parties guarantee the accuracy, timeliness, performance, 
+                completeness or suitability of the information and materials found or offered on this website for any 
+                particular purpose. You acknowledge that such information and materials may contain inaccuracies or 
+                errors and we expressly exclude liability for any such inaccuracies or errors to the fullest extent 
+                permitted by law.
+            </li>
+            <li class="list-li">
+                It is mandatory to complete the required fields of the contact form, it must be completed 
+                with personal information in an accurate and true manner.
+            </li>
+            <li class="list-li">
+                The terms and conditions, as well as the privacy policy, may be modified at any time. It is the user's 
+                responsibility to periodically review this page to ensure that he/she agrees with the changes made.
             </li>
         </ul>
-        <h2 class="main-subtitle">Políticas de Privacidad</h2>
+        <h2 class="main-subtitle">Privacy Policies</h2>
         <ul class="main-list">
             <li class="list-li">
-                El formulario de contacto de OvenBird Team sólo recopila información personal necesaria para poder 
-                contactar con el usuario: nombre, apellido, correo electrónico, empresa o institución si es que 
-                pertenece a una, y el mensaje que desea enviar. Estos datos llegan a través del servicio de FormSubmit 
-                (<a href="https://formsubmit.co/">https://formsubmit.co/</a>) producto de Devro LABS 
-                (<a href="https://devrolabs.com/">https://devrolabs.com/</a>).
+                The OvenBird Team contact form only collects the personal information necessary to contact the user: 
+                first name, last name, email address, and the message you wish to send. This data is sent through 
+                Netlify's Forms service (https://www.netlify.com/).
             </li>
             <li class="list-li">
-                Por nuestra parte, OvenBird Team se compromete a garantizar que su privacidad esté protegida. Si le pedimos que 
-                proporcione cierta información por la cual pueda ser identificado al utilizar este sitio web, puede estar 
-                seguro de que solo se utilizará de acuerdo con nuestra política de privacidad.
+                For our part, OvenBird Team is committed to ensuring that your privacy is protected. Should we ask you to
+                provide certain information by which you can be identified when using this website, you can be 
+                assured that it will only be used in accordance with our privacy policy.
             </li>
             <li class="list-li">
-                OvenBird Team almacena por tiempo indefinido los datos ingresados por el formulario de contacto. Estos estan
-                sujetos a la Ley 25326 De Protección de Datos Personales de La República Argentina. Puedes solicitar recibir 
-                a travéz del correo electrónico ovenbirdteam@gmail.com un archivo de exportación de los datos personales que 
-                tenemos sobre ti, incluyendo cualquier dato que nos hayas proporcionado. También puedes solicitar que eliminemos 
-                cualquier dato personal que tengamos sobre ti. Esto no incluye ningún dato que estemos obligados a conservar con 
-                fines administrativos, legales o de seguridad. El uso de sus datos son únicamente de contacto.
+                OvenBird Team stores the data entered by the contact form indefinitely. These are subject to Law 25326 on 
+                the Protection of Personal Data of the Argentine Republic. You can request to receive via email 
+                ovenbirdteam@gmail.com an export file of the personal data we have about you, including any data you have 
+                provided to us. You can also request that we delete any personal data we have about you. This does not include 
+                any data that we are obliged to retain for administrative, legal or security purposes. The use of your data 
+                is for contact purposes only.
             </li>
         </ul>
     </main>
